propertee-core/src/test/resources/tests/108_error_integer_overflow.expected
before
Runtime error: Runtime Error at line 3:4: Integer overflow
