propertee-core/src/test/resources/tests/108_error_integer_overflow.tee
// spec v0.13.0: integer arithmetic overflow is a runtime error (no silent wrap)
PRINT("before")
x = 2147483647 + 1
PRINT("unreachable")
